 
[v1.1.2p8d]
 - Bugfix: When clicking on a Dockable with no focusable Components, the framework will now attempt to focus one of the children (at least ensuring focus goes away from the old Component)
 - API: It is now possible to "close" a decorated externalized Dockable in Common (the CDockable is normalized). The behavior can be customized with the property key ScreenDockStation.WINDOW_CLOSING_STRATEGY.

[v1.1.2p8e]
 - Bugfix: SeparatingMenuPiece did call "remove" one time too often if both top and bottom separator were enabled and the item count did fall to 0
 
[v1.1.2p8f]
 - Bugfix: could not use toolbars because of a NullPointerException
 - Bugfix: updating a title when removing a Dockable from a StackDockStation could cause an exception, the listener that observers the title-event is now removed earlier.
 
[v1.1.2p9]
 - API: added the DockComponentManager which allows clients to directly configure nearly all Components that are created the framework

[v1.1.2p9a]
 - Bugfix: If a SplitDockStation was not at coordinates 0/0, then the SideSnapDropLayer was actually at the wrong position
 - Bugfix: There could be a ConcurrentModificationException if ModeArea were created or removed during a drag and drop operation

[v1.1.2p9b]
 - Bugfix: It is no longer possible to merge two stacks of floating CDockables that have a different working-area
 
[v1.1.2p9c]
 - API: Added "setEnabled" to RootMenuPiece allowing clients to disable the menu
 
[v1.1.2p9d]
 - Bugfix: CGridPerspective did not allow its subclass CWorkingPerspective to configure the delegate early enough
 - API: Overloaded CControlPerspective.setPerspective with a version that allows to store the contents of working areas
 - Bugfix: StackDockStation did fire a focus event when its theme was updated
 
[v1.1.2p10]
 - Bugfix: Thanks to an anonymous user, a memory leak in BasicButtonDockTitle was found and fixed
 
[v1.1.2p10a]
 - Bugfix: ToolbarGroupTitle did ignore the color, and always used the same gray