@@ -989,3 +989,4 @@
  
 [v1.1.2p10a]
  - Bugfix: ToolbarGroupTitle did ignore the color, and always used the same gray
+ - Bugfix: When reading a CPerspective a new instanceof of CommonSingleDockableFactory needed to be registered as backup factory
